reverting site_url

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,5 +1,5 @@
 site_name: Alex Brown Consulting
-site_url: https://www.alexbrownconsulting.com/
+site_url: https://alexbrown10.github.io/personal-portfolio/
 site_author: Alex Brown
 
 # configuration
